fixed minor spacing issues and heading style

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h4 {
+  font-size: 12px;
+  font-weight: 500;  
+  color: #464646;
+  line-height: normal;
+  margin: 10px 0 6px 0;
+}
